# 4homework

./: CMakeLists.txt
forTest/: test.sh
include/: lexer.hpp  parser.hpp
include/node/: add.hpp  astnode.hpp  div.hpp  mul.hpp  number.hpp  sub.hpp  variable.hpp
src/: lexer.cpp  main.cpp  parser.cpp
src/node/: add.cpp  div.cpp  mul.cpp  number.cpp  sub.cpp  variable.cpp
